@@ -1,3 +1,7 @@
+drkns 2024-09-15 14:00:02+01:00 - build 345
+
+1. Improve compression method detection when updating archives.
+
 drkns 2024-08-28 22:00:00+01:00 - build 344
 
 1. Updated 7z.dll to v24.08.
